added functionality for adding publishers

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,5 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddPublisherActivity"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
