--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+        
         <activity android:name=".LatestMenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -15,8 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity android:name=".AddPublisherActivity"
                   android:label="@string/app_name">
         </activity>
+        
+        <activity android:name=".PreferencesActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
+        <activity android:name=".EditPublishersActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
     </application>
 </manifest>
