--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,10 @@
             </intent-filter>
         </activity>
         
+        <activity android:name=".PublisherActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
         <activity android:name=".ArticleActivity"
                   android:label="@string/app_name">
         </activity>
